[package]
name = "sfo-js"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/wugren/sfo-js.git"
license-file = "LICENSE"
description = "A wrapper to simplify the use of boa-engine"

[dependencies]
sfo-result = { version = "0.2"}
boa_engine = { version = "0.21", features = ["embedded_lz4", "native-backtrace", "trace", "annex-b", "temporal", "jsvalue-enum", "intl_bundled", "either", "deser", "float16"] }
boa_runtime = { version = "0.21", features = ["all"] }
serde_json = "1"
tokio = { version = "1", features = ["full"]}
rustc-hash = "2"
log = "0.4"

[dev-dependencies]
clap = "4"
sfo-log = "0.1"
